src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_3_environment.snap
---
source: src/tests/let_statement/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "double": Function {
                    parameters: [
                        "x",
                    ],
                    block: Block {
                        nodes: [
                            Expression {
                                expression: Infix {
                                    left_hand: Identifier {
                                        identifier: "x",
                                    },
                                    operator: Multiply,
                                    right_hand: Integer {
                                        literal: 2,
                                    },
                                },
                            },
                        ],
                    },
                    ..
                },
            },
            enclosing: None,
        },
    },
}
