src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_4_environment.snap
---
source: src/tests/let_statement/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "add": Function {
                    parameters: [
                        "x",
                        "y",
                    ],
                    block: Block {
                        nodes: [
                            Expression {
                                expression: Infix {
                                    left_hand: Identifier {
                                        identifier: "x",
                                    },
                                    operator: Plus,
                                    right_hand: Identifier {
                                        identifier: "y",
                                    },
                                },
                            },
                        ],
                    },
                    ..
                },
            },
            enclosing: None,
        },
    },
}
