src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_4_syntax_analysis.snap
---
source: src/tests/let_statement/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "add",
            expression: Function {
                parameters: [
                    "x",
                    "y",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: PlusInfix {
                                left_hand: Identifier {
                                    identifier: "x",
                                },
                                right_hand: Identifier {
                                    identifier: "y",
                                },
                            },
                        },
                    ],
                },
            },
        },
    },
]
