src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_5_environment.snap
---
source: src/tests/let_statement/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "a": Integer {
                    value: 5,
                },
            },
            enclosing: None,
        },
    },
}
