src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_6_environment.snap
---
source: src/tests/let_statement/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "a": Integer {
                    value: 25,
                },
                "b": Integer {
                    value: 91,
                },
            },
            enclosing: None,
        },
    },
}
