src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_6_lexical_analysis.snap
---
source: src/tests/let_statement/mod.rs
assertion_line: 39
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "a",
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 7,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 25,
        },
        position: Position {
            line: 1,
            column: 9,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 11,
        },
    },
    PositionedToken {
        token: Let,
        position: Position {
            line: 2,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "b",
        },
        position: Position {
            line: 2,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 2,
            column: 7,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 91,
        },
        position: Position {
            line: 2,
            column: 9,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 2,
            column: 11,
        },
    },
]
